--- a/free.man
+++ b/free.man
@@ -3,12 +3,20 @@ Utilitario Unix 'free'
 O utilitario Unix 'free' e responsavel por exibir informacoes de memoria instalada, reservada e
 em uso do sistema.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 file
 
 Nenhum parametro adicional e necessario.
 
 Para mais informacoes, insira 'free ?' ou 'free --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
