--- a/uname.man
+++ b/uname.man
@@ -17,17 +17,17 @@ para o usuario. Estes parametros sao:
 
 Na ausencia de parametros, a opcao '-s' sera selecionada automaticamente.
 
-Exemplo de saida do utilitario para esse parametro (-a):
-
-Hexagonix Hexagonix-PC Hexagon(R) versao 8.58b i386 Hexagonix
-
-Temos, por ordem (separado por espaco), as informacoes abaixo:
-
-Plataforma | Hostname | Kernel e versao | Arquitetura | Nome do Sistema Operacional
-
 Para mais informacoes, insira 'uname ?' ou 'uname --ajuda'. 
 
 Voce tambem pode utilizar 'arch' e 'hostname' para obter essas informacoes.
 Utilize 'man arch' ou 'man hostname' para mais informacoes.
 
-Hexagonix                               [2.0 05/06/2022]
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
+
+Hexagonix                               [2.1 04/12/2022]
