--- a/echo.man
+++ b/echo.man
@@ -3,10 +3,18 @@ Utilitario Unix 'echo'
 O utilitario Unix 'echo' e responsavel por exibir determinado conteudo fornecido pelo usuario no
 console padrao do sistema.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 file <mensagem>
 
 Para mais informacoes, insira 'echo ?' ou 'echo --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
