--- a/fnt.man
+++ b/fnt.man
@@ -3,12 +3,20 @@ Utilitario Unix 'fnt'
 O utilitario Unix 'fnt' pode ser usado para alterar a fonte padrao de exibicao do servidor 
 grafico do sistema.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 fnt <nome do arquivo que contem a fonte>
 
 Normalmente, as fontes apresentam a extensao '.fnt'.
 
 Para mais informacoes, insira 'fnt ?' ou 'fnt --ajuda'. 
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
