--- a/lshmod.man
+++ b/lshmod.man
@@ -4,12 +4,20 @@ O utilitario Unix 'lshmod' e responsavel por exibir informacoes a respeito de um
 de modulo HBoot ou do proprio HBoot. As informacoes sao recuperadas da imagem e exibidas,
 como a arquitetura de destino da imagem, a versao do modulo e seu nome interno.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 lshmod <nome de arquivo>
 
 Nenhum parametro adicional e necessario.
 
 Para mais informacoes, insira 'lshmod ?' ou 'lshmod --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
