--- a/man.man
+++ b/man.man
@@ -3,12 +3,20 @@ Utilitario Unix 'man'
 O utilitario Unix 'man' e responsavel por exibir uma ajuda mais compreensivel a respeito dos
 utilitarios Unix mais comuns disponibilizados juntamente com o sistema.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 man <nome do utilitario>
 
 Nenhum parametro adicional e necessario.
 
 Para mais informacoes, insira 'man ?' ou 'man --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
