--- a/rm.man
+++ b/rm.man
@@ -6,12 +6,20 @@ Lembrando que previlegios de usuario raiz (root) podem ser solicitados para a op
 exclusao. Um arquivo removido pode, ate certo ponto e na teoria, ser recuperado por softwares
 especificos, que podem resultar em custos e alta probabilidade de falhas e perda de dados.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 rm <nome de arquivo>
 
 Nenhum parametro adicional e necessario.
 
 Para mais informacoes, insira 'rm ?' ou 'rm --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
