--- a/top.man
+++ b/top.man
@@ -5,12 +5,20 @@ atraves do nome das imagens em disco. O utilitario tambem exibe informacoes de m
 ao usuario a quantidade de memoria em uso por processos do usuario e tambem o total de memoria
 instalada no computador.
 
-Uso do utilitario:
+USO DO UTILITARIO:
 
 top
 
 Normalmente, as fontes apresentam a extensao '.fnt'.
 
 Para mais informacoes, insira 'top ?' ou 'top --ajuda'.
+
+HISTORIA
+
+Esse comando apareceu no Hexagonix H1 (2016-2021).
+
+AUTOR
+
+Felipe Miguel Nery Lunkes
 
 Hexagonix                               [2.0 05/06/2022]
