--- a/arch.man
+++ b/arch.man
@@ -1,22 +1,22 @@
-Utilitario Unix 'arch'
+Unix utility 'arch'
 
-O utilitario Unix 'arch' e responsavel por exibir a arquitetura do dispositivo, Hexagon(R) e
-utilitarios e nao aceita argumentos. 
+The Unix utility 'arch' is responsible for displaying the architecture of the device, Hexagon(R)
+and utilities and does not accept arguments.
 
-USO DO UTILITARIO:
+USAGE:
 
 arch
 
-Nenhum parametro adicional e necessario.
+No additional parameters are required.
 
-Para mais informacoes, insira 'arch ?' ou 'arch --ajuda'. 
+For more information, enter 'arch ?' or 'arch --help'.
 
-HISTORIA
+HISTORY
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 (2016-2021).
 
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
-Hexagonix                               [2.0 05/06/2022]
+Hexagonix                           [2.0 05/06/2022]
