--- a/date.man
+++ b/date.man
@@ -1,22 +1,22 @@
-Utilitario Unix 'date'
+Unix utility 'date'
 
-O utilitario Unix 'date' e responsavel por exibir informacoes de data e hora obtidas do relogio em
-tempo real do sistema.
+The Unix utility 'date' is responsible for displaying date and time information obtained from the 
+clock insystem real time.
 
-USO DO UTILITARIO:
+USAGE:
 
 date
 
-Nenhum parametro adicional e necessario.
+No additional parameters are required.
 
-Para mais informacoes, insira 'date ?' ou 'date --ajuda'.
+For more information, enter 'date ?' or 'date --help'.
 
-HISTORIA
+HISTORY
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 (2016-2021).
 
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
-Hexagonix                               [2.0 05/06/2022]
+Hexagonix                           [2.0 05/06/2022]
