--- a/file.man
+++ b/file.man
@@ -1,27 +1,26 @@
-Utilitario Unix 'file'
+Unix utility 'file'
 
-O utilitario Unix 'file' e responsavel por exibir informacoes a respeito de um arquivo fornecido
-como parametro. O utilitario pode identificar o conteudo do arquivo pela sua extensao ou ainda
-lendo parte do seu conteudo, como cabecalho de imagens binarias HAPP ou modulos HBoot, alem de 
-outros arquivos. O utilitario checa inicialmente a identidade buscando uma serie de cabecalhos
-no interior do arquivo. Caso nenhuma assinatura conhecida seja encontrada, ele infere o tipo de
-arquivo pela extensao. O conteudo do arquivo nao e todo analisado, apenas os primeiros bytes que 
-possam conter uma assinatura de arquivo.
+The Unix utility 'file' is responsible for displaying information about a given file as parameter.
+The utility can identify the file's contents by its extension or even reading some of its content,
+such as headers from HAPP binary images or HBoot modules, as well as other files. The utility 
+initially checks the identity by looking for a series of headers inside the file. If no known 
+signature is found, it infers the type of file by extension. The file content is not analyzed at
+all, just the first few bytes that may contain a file signature.
 
-USO DO UTILITARIO:
+USAGE:
 
-file <nome do arquivo>
+file <filename>
 
-Nenhum parametro adicional e necessario.
+No additional parameters are required.
 
-Para mais informacoes, insira 'file ?' ou 'file --ajuda'.
+For more information, enter 'file ?' or 'file --help'.
 
-HISTORIA
+HISTORY
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 (2016-2021).
 
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
-Hexagonix                               [2.0 05/06/2022]
+Hexagonix                           [2.0 05/06/2022]
